# KWEB_assignment_BE

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  auth.py  course.py  user.py
app/crud/: crud_course.py  crud_post.py  crud_user.py
app/database/: base.py
config/: settings.py
